--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@ img{
 #img4:hover {opacity: 0.7;}
 
 /*Chinh background 4 tab*/
-#Home {background-image: url("E:/red.jpg");font-size: 20px;}
+#Home {background-image: url("/red.jpg");font-size: 20px;}
 #News {
-  background-image: url("E:/blue.jpg");
+  background-image: url("/blue.jpg");
 }
-#Contact {background-image: url("E:/green.jpg");}
-#About {background-image: url("E:/orange.jpg");}
+#Contact {background-image: url("/green.jpg");}
+#About {background-image: url("/orange.jpg");}
 
 #About button{
   height: 40px;
@@ -142,10 +142,10 @@ img{
   </div>
   <div class="right">  
     <!-- Tab2 chinh thumbnail -->
-    <div class="img"><img src="E:/webdesign.jpg" alt="" id="img1"></div>
-    <div class="img"><img src="E:/photo.jpg" alt="" id="img2"></div>
-    <div class="img"><img src="E:/typo.jpg" alt="" id="img3"></div>
-    <div class="img"><img src="E:/webdesign.jpg" alt="" id="img4"></div>
+    <div class="img"><img src="/webdesign.jpg" alt="" id="img1"></div>
+    <div class="img"><img src="/photo.jpg" alt="" id="img2"></div>
+    <div class="img"><img src="/typo.jpg" alt="" id="img3"></div>
+    <div class="img"><img src="/webdesign.jpg" alt="" id="img4"></div>
     <!-- ............................. -->
   </div>
 </div>
@@ -155,9 +155,9 @@ img{
 
 <div id="About" class="tabcontent">
   <!-- tab 4 chinh anh va link ava -->
-  <div class="left1"><div class="ava"><img src="E:/ava2.jpg" alt="">
+  <div class="left1"><div class="ava"><img src="/ava2.jpg" alt="">
     <button onclick="window.location.href='https://www.facebook.com/helios170599'">Facebook</button></div></div>
-  <div class="right1"><div class="ava"><img src="E:/ava1.jpg" alt="">
+  <div class="right1"><div class="ava"><img src="/ava1.jpg" alt="">
     <button onclick="window.location.href='https://www.behance.net/helios170599'">Behance</button></div></div>
     <!-- -------------------------------------------------------- -->
 </div>
@@ -172,19 +172,19 @@ var modalImg = document.getElementById("img");
 // Chinh anh trinh chieu
 img1.onclick = function(){
   bigImg.style.display = "block";
-  modalImg.src = "E:/webdesign1.jpg";
+  modalImg.src = "/webdesign1.jpg";
 }
 img2.onclick = function(){
   bigImg.style.display = "block";
-  modalImg.src = "E:/photo1.jpg";
+  modalImg.src = "/photo1.jpg";
 }
 img3.onclick = function(){
   bigImg.style.display = "block";
-  modalImg.src = "E:/typo1.jpg";
+  modalImg.src = "/typo1.jpg";
 }
 img4.onclick = function(){
   bigImg.style.display = "block";
-  modalImg.src = "E:/webdesign2.jpg";
+  modalImg.src = "/webdesign2.jpg";
 }
 // --------------------------------------------------
 function openPage(pageName,elmnt,color) {
